fix video overflow in mobile

--- a/css/common.css
+++ b/css/common.css
@@ -820,7 +820,8 @@ div.quote div.quoteheader
 }
 
 /* [video] */
-.post video, .post iframe {
+.post video, .post iframe,
+.mobile-postBox video, .mobile-postBox iframe {
 	max-width: 100%;
 	max-height: 600px;
 }
